Ubacen tekst za vecinu sajta

--- a/index.html
+++ b/index.html
@@ -155,10 +155,9 @@
 							</p>
 						</header>
 						<p>
-							Tim je osnovan 2017.godine, pri Mašinskom fakultetu, kada je grupa studenata Katedre za brodogradnju, predvođeni asistentom (sada profesorom) Stefanom Rudakovićem, odlučila da se prijavi na Hydrocontest takmičenje, koje se održavalo u Saint Tropezu.
-		                Za vrlo kratak period, tim je uspeo da se ostvario na prestižnim takmičenjima i da dokaže svoj kvalitet. 
-					    <br>Prve godine je osvojio...
-						<br> Druge godine je osvojio...
+							Mi smo tim studenata Univerziteta u Beogradu, okupljen oko Katedre za brodogradnju, Mašinskog fakulteta sa ciljem da unapredimo i proširimo svoja znanja učešćem i dokazivanjem na studentskim takmičenjima širom Evrope. 
+Naš tim čine entuzijasti jedrenja, ronjenja, novih tehnologija, prirode i potrage za osećajem slobode. 
+Svaki trenutak proveden na vodi ili razmišljajući o vodi je dobar trenutak!
 						</p>
 						<footer>
 							<a href="tim.html" class="button">Pročitaj više</a>
