--- a/tim.html
+++ b/tim.html
@@ -228,7 +228,7 @@ Tim trenutno prima nove članove, tako da ako ste student sa visokim ambicijama,
 										
 										<li><a href="https://www.facebook.com/confluencebelgrade" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/confluence_bg/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 									</ul>
 								</section>
 
