--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<li>
 									<a href="#">Projekti</a>
 									<ul>
-										<li><a href="#">SavaEko</a></li>
+										<li><a href="SavaEko.html">SavaEko</a></li>
 										<li><a href="Dunav.html" target="_blank">Dunav</a></li>
 										<li><a href="Sava.html" target="_blank">Sava 1.0</a></li>
 										 
@@ -66,7 +66,7 @@
 										</ul>
 										</li>
 								<li><a href="tim.html" target="_blank">Tim</a></li>
-								<li><a href="right-sidebar.html">Partneri</a></li>
+								<li><a href="Partneri.html">Partneri</a></li>
 								<li><a href="kontakt.html" target="_blank">Kontakt</a></li>
 							</ul>
 						</nav>
